pkl-core/src/test/files/LanguageSnippetTests/input/errors/undefinedOp3.pkl
l = List(1,2,3)
res1 = l["idx"]